tests/NormalTests/paczka1/small_fuzzy/53080388.err
Error in line 3: A610 A610 27,4
Error in line 13: RaU S847 22,5
